dataset1235/2025-2/805158916/users/4160895627/executions/71079933_3788368433.log
== RUN (2025-08-11 18:12:50)
-- CODE: 

var = input("digite seu nome:");
print=(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
digite seu nome:
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
digite seu nome:
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
digite seu nome:
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
digite seu nome:
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:36:36)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = "input";

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:var
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:var
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:var
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:var
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:35:36)
-- CODE: 
# Use este codigo como ponto de partida
input("");
# Leitura de valores de entrada
var = input;

# Impressao de saidas
print("input")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
input
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
input
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
input
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
input
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
input
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:37:59)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = input();

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:12:09)
-- CODE: 

var = input("digite seu nome:");
print="input"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
digite seu nome:
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
digite seu nome:
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
digite seu nome:
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
digite seu nome:
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:16:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite seu nome:");

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:12:10)
-- CODE: 

var = input("digite seu nome:");
print="input"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
digite seu nome:
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
digite seu nome:
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
digite seu nome:
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
digite seu nome:
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:11:43)
-- CODE: 

var = input("digite seu nome:");

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
digite seu nome:
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
digite seu nome:
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
digite seu nome:
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
digite seu nome:
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:16:56)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite seu nome:");

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:38:18)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = ;

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:38:17)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = ;

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = ;
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:11:43)
-- CODE: 

var = input("digite seu nome:");

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
digite seu nome:
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
digite seu nome:
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
digite seu nome:
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
digite seu nome:
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:35:54)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome");
# Leitura de valores de entrada
var = input;

# Impressao de saidas
print("input")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nomeinput
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nomeinput
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nomeinput
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nomeinput
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nomeinput
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:37:21)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = "input()";

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:input()
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:input()
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:input()
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:input()
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:input()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:08:59)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = joao;

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 18:16:57)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite seu nome:");

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:36:48)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = "input";

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:input
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:input
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:input
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:input
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:input
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:37:33)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = input();

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input();
          ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:38:28)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = input;

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:13:21)
-- CODE: 

var = input("digite seu nome:");
print=("input")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
digite seu nome:
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
digite seu nome:
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
digite seu nome:
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
digite seu nome:
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:12:32)
-- CODE: 

var = input("digite seu nome:");
print="var"
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
digite seu nome:
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
digite seu nome:
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
digite seu nome:
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
digite seu nome:
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
digite seu nome:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:08:27)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = input;

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:<built-in function input>
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 18:09:00)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = joao;

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = joao;
          ^^^^
NameError: name 'joao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:36:15)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = "input";

# Impressao de saidas
print("input")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:input
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:input
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:input
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:input
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:input
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:36:07)
-- CODE: 
# Use este codigo como ponto de partida
input("Digite seu nome:");
# Leitura de valores de entrada
var = input;

# Impressao de saidas
print("input")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Digite seu nome:input
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Digite seu nome:input
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Digite seu nome:input
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Digite seu nome:input
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite seu nome:input
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
